Feature Engineering facilities & location

--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "4          InternetRestaurant  7.2 Very GoodFrom 30 reviews        Stokol"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,11 +149,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features['Restaurant']=''"
+    "features['Restaurant']=''\n",
+    "features['Bar']=''\n",
+    "features[\"Gym\"]=''\n",
+    "features['Internet']=''\n",
+    "features['Swimming Pools']=''\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>facilities</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>Restaurant</th>\n",
+       "      <th>Bar</th>\n",
+       "      <th>Gym</th>\n",
+       "      <th>Internet</th>\n",
+       "      <th>Swimming Pools</th>\n",
+       "      <th>location_Andeman</th>\n",
+       "      <th>location_Hallerson</th>\n",
+       "      <th>location_Machlessvile</th>\n",
+       "      <th>location_Stokol</th>\n",
+       "      <th>location_Uberlandia</th>\n",
+       "      <th>location_Ubisville</th>\n",
+       "      <th>location_Wanderland</th>\n",
+       "      <th>location_Willsmian</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>restaurantbarswimmingpools</td>\n",
+       "      <td>7.8 Very GoodFrom 10 reviews</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>intrnetrestaurantgym</td>\n",
+       "      <td>5.6 GoodFrom 4 reviews</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>restaurantgympoolbar</td>\n",
+       "      <td>7.2 Very GoodFrom 38 reviews</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>barrestaurant</td>\n",
+       "      <td>7.3 Very GoodFrom 6 reviews</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>internetrestaurant</td>\n",
+       "      <td>7.2 Very GoodFrom 30 reviews</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   facilities                        rating Restaurant Bar   \n",
+       "0  restaurantbarswimmingpools  7.8 Very GoodFrom 10 reviews          1   1  \\\n",
+       "1        intrnetrestaurantgym        5.6 GoodFrom 4 reviews          1   0   \n",
+       "2        restaurantgympoolbar  7.2 Very GoodFrom 38 reviews          1   1   \n",
+       "3               barrestaurant   7.3 Very GoodFrom 6 reviews          1   1   \n",
+       "4          internetrestaurant  7.2 Very GoodFrom 30 reviews          1   0   \n",
+       "\n",
+       "  Gym Internet Swimming Pools  location_Andeman  location_Hallerson   \n",
+       "0   0        0              1                 0                   0  \\\n",
+       "1   1        0              0                 0                   0   \n",
+       "2   1        0              0                 0                   0   \n",
+       "3   0        0              0                 0                   0   \n",
+       "4   0        1              0                 0                   0   \n",
+       "\n",
+       "   location_Machlessvile  location_Stokol  location_Uberlandia   \n",
+       "0                      0                1                    0  \\\n",
+       "1                      1                0                    0   \n",
+       "2                      0                0                    0   \n",
+       "3                      0                0                    1   \n",
+       "4                      0                1                    0   \n",
+       "\n",
+       "   location_Ubisville  location_Wanderland  location_Willsmian  \n",
+       "0                   0                    0                   0  \n",
+       "1                   0                    0                   0  \n",
+       "2                   0                    1                   0  \n",
+       "3                   0                    0                   0  \n",
+       "4                   0                    0                   0  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ind in features.index:\n",
+    "    features['facilities'][ind] = features['facilities'][ind].lower()\n",
+    "\n",
+    "    if 'restaurant' in features['facilities'][ind] :\n",
+    "        features['Restaurant'][ind] = 1\n",
+    "    else :\n",
+    "        features['Restaurant'][ind] = 0\n",
+    "\n",
+    "    if 'bar' in features['facilities'][ind] :\n",
+    "        features['Bar'][ind] = 1\n",
+    "    else :\n",
+    "        features['Bar'][ind] = 0\n",
+    "\n",
+    "    if 'swimmingpools' in features['facilities'][ind] :\n",
+    "        features['Swimming Pools'][ind] = 1\n",
+    "    else :\n",
+    "        features['Swimming Pools'][ind] = 0    \n",
+    "\n",
+    "    if 'gym' in features['facilities'][ind] :\n",
+    "        features['Gym'][ind] = 1\n",
+    "    else :\n",
+    "        features['Gym'][ind] = 0   \n",
+    "\n",
+    "    if 'internet' or 'intrnet' in features['facilities'][ind]  :\n",
+    "        features['Internet'][ind] = 1\n",
+    "    else :\n",
+    "        features['Internet'][ind] = 0\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = pd.get_dummies(features, columns = ['location'], dtype= int)"
    ]
   }
  ],
