--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -13,7 +13,8 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import MinMaxScaler , LabelEncoder\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from imblearn.over_sampling import RandomOverSampler "
+    "from imblearn.over_sampling import RandomOverSampler \n",
+    "from catboost import CatBoostRegressor"
    ]
   },
   {
@@ -26,15 +27,6 @@
     "test_set = pd.read_csv('dataset/test_feature.csv')\n",
     "features = pd.read_csv('dataset/train_features.csv')\n",
     "labels = pd.read_csv('dataset/train_label.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels.dtypes"
    ]
   },
   {
@@ -64,10 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "features['rating_average'] = np.NaN\n",
-    "features['review_count'] = np.NaN\n",
-    "features['review_multiple'] = np.NaN\n",
+    "features['rating_average'] = 0\n",
+    "features['review_count'] = 0\n",
+    "features['review_multiple'] = 0\n",
     "for ind in features.index:\n",
     "    if (features['rating'][ind] != \"NULL\"):\n",
     "        l = []\n",
@@ -83,31 +74,7 @@
     "        else:\n",
     "            features['rating'][ind] = \"NULL\"\n",
     "    else:\n",
-    "        features['rating'][ind] = \"NULL\"\n",
-    "\n",
-    "\n",
-    "print(features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features['rating_average'] = features['rating_average'].fillna(features['rating_average'].mean())\n",
-    "features['review_count'] = features['review_count'].fillna(features['review_count'].mean())\n",
-    "features['review_multiple'] = features['review_multiple'].fillna(features['review_multiple'].mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
-    "    print(features)"
+    "        features['rating'][ind] = \"NULL\"\n"
    ]
   },
   {
@@ -120,52 +87,52 @@
     "features['Bar']=999\n",
     "features[\"Gym\"]=999\n",
     "features['Internet']=999\n",
-    "features['Swimming Pools']=999\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "features['Swimming Pools']=999\n",
+    "\n",
     "for ind in features.index:\n",
     "    features['facilities'][ind] = features['facilities'][ind].lower()\n",
     "\n",
-    "    if 'restaurant' in features['facilities'][ind] :\n",
-    "        features['Restaurant'][ind] = int(1)\n",
+    "    \n",
+    "    if (features['rating'][ind] != \"NULL\"):\n",
+    "\n",
+    "        if 'restaurant' in features['facilities'][ind] :\n",
+    "            features['Restaurant'][ind] = int(1)\n",
+    "        else :\n",
+    "            features['Restaurant'][ind] = int(0)\n",
+    "\n",
+    "        if 'bar' in features['facilities'][ind] :\n",
+    "            features['Bar'][ind] = int(1)\n",
+    "        else :\n",
+    "            features['Bar'][ind] = int(0)\n",
+    "\n",
+    "        if 'swimmingpools' in features['facilities'][ind] :\n",
+    "            features['Swimming Pools'][ind] = int(1)\n",
+    "        else :\n",
+    "            features['Swimming Pools'][ind] = int(0)  \n",
+    "\n",
+    "        if 'gym' in features['facilities'][ind] :\n",
+    "            features['Gym'][ind] = int(1)\n",
+    "        else :\n",
+    "            features['Gym'][ind] = int(0)  \n",
+    "\n",
+    "        if 'internet' in features['facilities'][ind]  :\n",
+    "            features['Internet'][ind] = int(1)\n",
+    "        else :\n",
+    "            features['Internet'][ind] = int(0)\n",
+    "\n",
+    "        if 'intrnet' in features['facilities'][ind]  :\n",
+    "            features['Internet'][ind] = int(1)\n",
+    "        else :\n",
+    "            features['Internet'][ind] = int(0)\n",
+    "\n",
     "    else :\n",
     "        features['Restaurant'][ind] = int(0)\n",
-    "\n",
-    "    if 'bar' in features['facilities'][ind] :\n",
-    "        features['Bar'][ind] = int(1)\n",
-    "    else :\n",
     "        features['Bar'][ind] = int(0)\n",
-    "\n",
-    "    if 'swimmingpools' in features['facilities'][ind] :\n",
-    "        features['Swimming Pools'][ind] = int(1)\n",
-    "    else :\n",
     "        features['Swimming Pools'][ind] = int(0)  \n",
-    "\n",
-    "    if 'gym' in features['facilities'][ind] :\n",
-    "        features['Gym'][ind] = int(1)\n",
-    "    else :\n",
     "        features['Gym'][ind] = int(0)  \n",
-    "\n",
-    "    if 'internet' or 'intrnet' in features['facilities'][ind]  :\n",
-    "        features['Internet'][ind] = int(1)\n",
-    "    else :\n",
     "        features['Internet'][ind] = int(0)\n",
-    "\n"
+    "        \n",
+    "    \n"
    ]
   },
   {
@@ -175,6 +142,32 @@
    "outputs": [],
    "source": [
     "features = pd.get_dummies(features, columns = ['location'], dtype= int)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BATAS PENGECEKAN DATAFRAME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features[\"Swimming Pools\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features.iloc[312]"
    ]
   },
   {
@@ -189,6 +182,26 @@
     "    string = string.replace( ',', '')\n",
     "    labels['Price'][ind] = float(string)\n",
     "labels.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop Outlier\n",
+    "labels = labels.drop(index= [697,828,1030,1424,1856,2346])\n",
+    "features = features.drop(index= [697,828,1030,1424,1856,2346])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = labels.astype(\"int32\")"
    ]
   },
   {
@@ -215,85 +228,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train = y_train.astype('int32')\n",
-    "y_test = y_test.astype('int32')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xgboost as xgb\n",
-    "#=========================================================================\n",
-    "# XGBoost regression: \n",
-    "# Parameters: \n",
-    "# n_estimators  \"Number of gradient boosted trees. Equivalent to number \n",
-    "#                of boosting rounds.\"\n",
-    "# learning_rate \"Boosting learning rate (also known as “eta”)\"\n",
-    "# max_depth     \"Maximum depth of a tree. Increasing this value will make \n",
-    "#                the model more complex and more likely to overfit.\" \n",
-    "#=========================================================================\n",
-    "regressor=xgb.XGBRegressor(eval_metric=mean_absolute_error)\n",
-    "\n",
-    "#=========================================================================\n",
-    "# exhaustively search for the optimal hyperparameters\n",
-    "#=========================================================================\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "# set up our search grid\n",
-    "param_grid = {\"max_depth\":    [4, 5, 6],\n",
-    "              \"n_estimators\": [500, 600, 700],\n",
-    "              \"learning_rate\": [0.01, 0.015]}\n",
-    "\n",
-    "# try out every combination of the above values\n",
-    "search = GridSearchCV(regressor, param_grid, cv=5).fit(x_train, y_train)\n",
-    "\n",
-    "print(\"The best hyperparameters are \",search.best_params_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regressor=xgb.XGBRegressor(learning_rate = search.best_params_[\"learning_rate\"],\n",
-    "                           n_estimators  = 1000,\n",
-    "                           max_depth     = search.best_params_[\"max_depth\"],\n",
-    "                           eval_metric='rmsle')\n",
-    "\n",
-    "regressor.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "# Initializing\n",
-    "model = RandomForestRegressor(verbose=2, n_estimators= 1000)\n",
+    "model = RandomForestRegressor(verbose=2, n_estimators= 200)\n",
     "\n",
     "# Training\n",
     "model.fit(x_train,y_train)"
@@ -305,16 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = regressor.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred"
+    "y_pred = model.predict(x_test)"
    ]
   },
   {
@@ -325,11 +254,7 @@
    "source": [
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
-    "# Proses evaluasi h1n1 vaccine\n",
-    "y_true = y_test\n",
-    "y_pred = y_pred\n",
-    "\n",
-    "mean_absolute_error(y_true, y_pred)\n"
+    "mean_absolute_error(y_pred, y_test)\n"
    ]
   },
   {
@@ -535,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
